<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/gray_dialog_background"
    android:layout_width="309sp"
    android:layout_height="171sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="23sp"
            android:text="HK$"
            android:textColor="@color/colorMyGray_10"
            android:textSize="16sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="220sp"
            android:layout_height="30sp"
            android:layout_marginLeft="14sp"
            android:background="@drawable/transparent_border_view_background"
            android:hint="@string/enter_amount"
            android:textColor="@color/colorMyGray_10"
            android:textSize="14sp"
            android:paddingLeft="10sp"
            android:gravity="left|center"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel_TransferChatAmountDialog"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:background="@drawable/red_button_border"
            android:text="@string/cancel"
            android:textColor="@color/colorMyWhite"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btnOk_TransferChatAmountDialog"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:layout_marginLeft="21sp"
            android:background="@drawable/blue_button_border"
            android:text="@string/ok"
            android:textColor="@color/colorMyWhite"
            android:textSize="14sp"/>
    </LinearLayout>
</LinearLayout>