<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.isquare.PasswordResetActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorMyGray_1">

        <TextView
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_password"
            android:textColor="@color/colorMyGray_10"
            android:textSize="20sp"
            android:layout_gravity="center"/>


    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMyWhite">


        <TextView
            android:id="@+id/txtCheckMark"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:text="@string/fa_envelope"
            android:textColor="@color/colorMyDarkBlue"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.29"/>

        <TextView
            android:id="@+id/txtFirstSentence"
            android:layout_width="wrap_content"
            android:layout_height="23sp"
            android:text="@string/new_password_was_sent_to_your_email"
            android:textColor="@color/colorMyGray_10"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/txtCheckMark"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="23dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="23sp"
            android:text="@string/please_check"
            android:textColor="@color/colorMyGray_10"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstSentence"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSignIn_Password_sent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginBottom="19dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/red_button_border"
            android:textColor="@color/colorMyWhite"/>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
