<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain_SignUpSuccess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    tools:context="com.example.david.isquare.SignUpSuccessActivity">

    <TextView
        android:id="@+id/txtCheckMark"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:text="@string/fa_check"
        android:textColor="@color/colorMyRed"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.41"
        />

    <TextView
        android:id="@+id/txtFirstSentence"
        android:layout_width="wrap_content"
        android:layout_height="23sp"
        android:text="@string/you_have_successfully_registered"
        android:textColor="@color/colorMyGray_10"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckMark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="23sp"
        android:text="@string/remember_your_id_and_password_to_sign_in_next_time"
        android:textColor="@color/colorMyGray_10"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstSentence"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnStart_SignUpSuccess"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginBottom="19dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/red_button_border"
        android:textColor="@color/colorMyWhite"/>

</android.support.constraint.ConstraintLayout>
