<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.isquare.Fragments.AdminFragments.AdminShopsFragments.AdminShopsDesignFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58sp"
            android:layout_marginBottom="1sp"
            android:background="@color/colorMyGray_1">

            <LinearLayout
                android:id="@+id/layoutRtn_AdminShopsDesignFrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="7sp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtIconRtn_AdminShopsDesignFrg"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:gravity="center"
                    android:text="@string/fa_chevron_left"
                    android:textColor="@color/colorMyDarkBlue"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/shops"
                    android:textColor="@color/colorMyGray_10"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMyGray_2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFirst_AdminShopsDesignFrg"
                        android:layout_width="match_parent"
                        android:layout_height="201sp"
                        android:layout_marginBottom="10sp"
                        android:layout_marginTop="25sp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/admin_shops_design_sample_image" />

                    <LinearLayout
                        android:id="@+id/layoutFirstLink_AdminShopsDesignFrg"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:layout_marginBottom="16sp"
                        android:background="@color/colorMyWhite">

                        <TextView
                            android:id="@+id/txtIconFirstLink_AdminShopsDesignFrg"
                            android:layout_width="45sp"
                            android:layout_height="45sp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20sp"
                            android:gravity="center"
                            android:text="@string/fa_link"
                            android:textColor="@color/colorMyRed"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45sp"
                            android:layout_gravity="center"
                            android:gravity="left|center"
                            android:padding="5sp"
                            android:text="@string/choose_product"
                            android:textColor="@color/colorMyGray_8"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSecond_AdminShopsDesignFrg"
                        android:layout_width="match_parent"
                        android:layout_height="201sp"
                        android:layout_marginBottom="10sp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:id="@+id/layoutSecondLink_AdminShopsDesignFrg"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:background="@color/colorMyWhite">

                        <TextView
                            android:id="@+id/txtIconSecondLink_AdminShopsDesignFrg"
                            android:layout_width="45sp"
                            android:layout_height="45sp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20sp"
                            android:gravity="center"
                            android:text="@string/fa_link"
                            android:textColor="@color/colorMyRed"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45sp"
                            android:layout_gravity="center"
                            android:gravity="left|center"
                            android:padding="5sp"
                            android:text="@string/perfume_armelle_102"
                            android:textColor="@color/colorMyGray_8"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:layout_marginBottom="6sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="30sp"
                        android:gravity="left|center"
                        android:text="@string/latest_added"
                        android:textColor="@color/colorMyBlack"
                        android:textSize="16sp" />

                    <com.example.david.isquare.CustomizedViews.ExpandedListView
                        android:id="@+id/listLatestAdded_AdminShopsDesignFrg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorMyWhite" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:layout_marginBottom="6sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="30sp"
                        android:gravity="left|center"
                        android:text="@string/best_sellers"
                        android:textColor="@color/colorMyBlack"
                        android:textSize="16sp" />

                    <com.example.david.isquare.CustomizedViews.ExpandedListView
                        android:id="@+id/listBestSellers_AdminShopsDesignFrg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorMyWhite" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>
